--- a/inmemantlr-api/pom.xml
+++ b/inmemantlr-api/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.github.julianthome</groupId>
         <artifactId>inmemantlr</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>1.3.9</version>
+        <version>1.4-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -38,6 +38,10 @@
             <artifactId>gson</artifactId>
             <version>2.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
         </dependency>
     </dependencies>
 
