--- a/inmemantlr-graal/pom.xml
+++ b/inmemantlr-graal/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>inmemantlr</artifactId>
         <groupId>com.github.julianthome</groupId>
-        <version>1.3.9</version>
+        <version>1.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.github.julianthome</groupId>
             <artifactId>inmemantlr-api</artifactId>
-            <version>1.3.9</version>
+            <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jgrapht</groupId>
