--- a/inmemantlr-tool/pom.xml
+++ b/inmemantlr-tool/pom.xml
@@ -7,14 +7,13 @@
         <groupId>com.github.julianthome</groupId>
         <artifactId>inmemantlr</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>1.3.9</version>
+        <version>1.4-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.julianthome</groupId>
     <artifactId>inmemantlr-tool</artifactId>
-    <version>1.3.9</version>
     <packaging>jar</packaging>
 
     <build>
@@ -82,7 +81,7 @@
         <dependency>
             <groupId>com.github.julianthome</groupId>
             <artifactId>inmemantlr-api</artifactId>
-            <version>1.3.9</version>
+            <version>1.4-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
