--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,12 @@
         <gpgplugin.version>1.6</gpgplugin.version>
         <javadocplugin.version>2.10.4</javadocplugin.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <junit.version>5.1.0-M1</junit.version>
+        <junit.version>5.1.0</junit.version>
         <antlr.version>4.7.1</antlr.version>
         <ecj.version>4.6.1</ecj.version>
         <commonsio.version>2.6</commonsio.version>
         <commonscli.version>1.4</commonscli.version>
-        <commonstext.version>1.2</commonstext.version>
+        <commonstext.version>1.3</commonstext.version>
     </properties>
 
     <licenses>
