--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,8 @@ language: java
 
 sudo : false
 
-# https://medium.com/@jonashavers/how-to-use-java-10-with-travis-ci-363c7dc2f708
-before_install:
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
-
-matrix:
-  include:
-    - env: JDK='Oracle JDK 10'
-      install: . ./install-jdk.sh -F 10 -L BCL
+jdk:
+  - oraclejdk9
 
 install:
   - git submodule init
