--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,6 +7,9 @@ branches:
     - master
 
 install:
+    - cinst jdk9 -params 'installdir=C:\\jdk9'
+    - SET JAVA_HOME=C:\jdk9
+    - SET PATH=C:\jdk9\bin;%PATH%
     - git submodule init
     - git submodule update
 
