--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,10 +6,10 @@ branches:
   only:
     - master
 
+configuration:
+  - Java9
+      
 install:
-    - cinst jdk9 -params 'installdir=C:\\jdk9'
-    - SET JAVA_HOME=C:\jdk9
-    - SET PATH=C:\jdk9\bin;%PATH%
     - git submodule init
     - git submodule update
 
