--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
                     <detectLinks>true</detectLinks>
                     <detectOfflineLinks>false</detectOfflineLinks>
                     <quiet>true</quiet>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                 </configuration>
             </plugin>
             <plugin>
